<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.LiveReportActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/live_report"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_upload_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/upload_a_picture"
                android:textColor="@color/blue_500"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_header" />

            <TextView
                android:id="@+id/txt_private_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/send_private_message"
                android:textColor="@color/blue_500"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_upload_picture" />

            <LinearLayout
                android:id="@+id/liner_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_private_message">

                <ImageView
                    android:id="@+id/img_capture_pic"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/seaside" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_contact_agent"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@color/blue_500"
                        android:fontFamily="sans-serif-black"
                        android:padding="0dp"
                        android:text="@string/contact_agent"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_save_pic"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="#75e900"
                        android:fontFamily="sans-serif-black"
                        android:padding="0dp"
                        android:text="@string/save_picture"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_private_message_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/private_message"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/liner_pic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recy_chat_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_private_message_header"
                tools:itemCount="6"
                tools:listitem="@layout/item_chat_message" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/nested_scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="3"
            android:autofillHints="search"
            android:background="@drawable/shap_rec_gray"
            android:fontFamily="sans-serif-black"
            android:hint="@string/enter_your_message"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColorHint="#BDBDBD"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/blue_500"
            android:fontFamily="sans-serif-black"
            android:padding="0dp"
            android:text="@string/send"

            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>