<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".views.SurfSpotDetailsActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-black"
        android:text="asjdhaksdha"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_locationImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/seaside"
        android:scaleType="fitXY"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <TextView
        android:id="@+id/txt_contact_agent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/contact_agent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_locationImage" />

    <TextView
        android:id="@+id/txt_buoyReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:text="Buoy report data for Tamarindo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contact_agent" />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_buoyReport" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating">

        <ImageView
            android:id="@+id/img_weather"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_cloud"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_weather" />
        <ImageView
            android:id="@+id/img_wind"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_wind"
            app:layout_constraintStart_toEndOf="@+id/txt_weather"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_wind" />
        <ImageView
            android:id="@+id/img_water"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_water"
            app:layout_constraintStart_toEndOf="@+id/txt_wind"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_water" />
        <ImageView
            android:id="@+id/img_buoy"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_wifi"
            app:layout_constraintStart_toEndOf="@+id/txt_water"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_buoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouy"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_buoy" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>