<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".views.frgs.PrivateMsgDialogFrg">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_private_message_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/private_message"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recy_chat_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_private_message_header"
                tools:itemCount="6"
                tools:listitem="@layout/item_chat_message" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/nested_scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:paddingRight="10dp"
            android:autofillHints="search"
            android:background="@drawable/shap_rec_gray"
            android:fontFamily="sans-serif-black"
            android:hint="@string/enter_your_message"
            android:inputType="text"
            android:paddingStart="10dp"
            android:layout_gravity="center"
            android:textColorHint="#BDBDBD"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/bt_send"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-black"
            android:text="@string/send"
            android:background="@drawable/ic_send"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>